# dist_lang

./: .gitignore  Cargo.toml  LanguageSpec.md  README.md
examples/: bind_test.tw  fib.tw  fix_test.tw  just_list.tw  list.tw  merge_sort.tw  merge_sort_par.tw  merge_sort_par_n.tw  parfib_twocore.tw  sum.tw  test.tw
examples/bench/merge/: arr_1000  arr_10000  arr_100000  gen.py  merge_sort.tw  merge_sort_par.tw  merge_sort_par_n.tw
examples/bench/tree/: tree1.tw  tree2.tw  tree3.tw  tree4.tw
src/: cek.rs  dynamics.rs  main.rs  parser.rs  types.rs
src/cek/mobile/: lazy.rs  mod.rs  os_thread.rs  rayon.rs  serial.rs
